test/e2e/fixtures/header-routing-auth/queries.json
[
  {"url": "/target/", "method": "GET"},
  {"url": "/target/good/", "method": "GET"},
  {"url": "/target/nohdr/", "method": "GET"},
  {"url": "/target/crap/", "method": "GET"}
]
